[package]
name = "argentum_user_account_rest"
description = "Business layer of user account component"
version = "0.1.0-dev"
license = "BSD-3-Clause"
edition = "2021"
homepage = "https://github.com/argentum-toolkit/argentum"
repository = "https://github.com/argentum-toolkit/argentum"
documentation = "https://github.com/argentum-toolkit/argentum"
readme = "readme.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argentum_rest_infrastructure = { path = "../../argentum_rest/infrastructure" }
argentum_standard_business = { path = "../../argentum_standard/business" }
argentum_user_business = { path = "../../argentum_user/business" }

async-trait = "0.1.*"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
erased-serde = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
uuid = {version = "1.4.*", features = ["serde", "v4"]}
